Вносит правки по баглисту (#5, #7, #10, #11, #13, #15, #20, #21)

--- a/source/index.html
+++ b/source/index.html
@@ -73,12 +73,12 @@
       <div class="container advantages__container">
         <h2 class="visually-hidden">Наши преимущества</h2>
         <ul>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--small">
             <svg width="29" height="35" viewBox="0 0 29 35" aria-label="Секундомер" focusable="false">
               <use xlink:href="img/sprite_auto.svg#icon-stopwatch"></use>
             </svg>
             <h3>Оперативные сроки</h3>
-            <p>Усовершенствованная логистическая система позволяет нам <br>просчитывать стоимость, производить и доставлять заказы плат и комплектующих в самые короткие сроки</p>
+            <p>Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и доставлять заказы плат и комплектующих в самые короткие сроки</p>
           </li>
           <li class="advantages__item">
             <svg width="35" height="35" viewBox="0 0 35 35" aria-label="Человечки в костюмах" focusable="false">
@@ -94,12 +94,12 @@
             <h3>Полная конфиденциальность</h3>
             <p>По желанию клиента  мы обеспечиваем полную конфеденциальность.</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--small">
             <svg width="35" height="35" viewBox="0 0 35 35" aria-label="Ярлык с ценником" focusable="false">
               <use xlink:href="img/sprite_auto.svg#icon-tag"></use>
             </svg>
             <h3>Персонализация стоимости</h3>
-            <p>Мы  подбираем определенную фабрику, поставщиков, вид доставки, чтобы <br>установить ту цену, которая Вас устраивает.</p>
+            <p>Мы  подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас устраивает.</p>
           </li>
         </ul>
       </div>
@@ -157,7 +157,7 @@
 
           <div class="feedback__message-field report__message-field">
             <label class="visually-hidden" for="message-field">Задайте интересующий Вас вопрос</label>
-            <textarea name="message" id="message-field" placeholder="Ваш вопрос" required></textarea>
+            <textarea name="message" id="message-field" placeholder="Ваш вопрос"></textarea>
           </div>
 
           <div class="feedback__agreement-field report__agreement-field">
@@ -284,7 +284,7 @@
 
         <div class="modal-form__field report__message-field">
           <label class="visually-hidden" for="message-call-field">Задайте интересующий Вас вопрос</label>
-          <textarea class="js-question" name="message" id="message-call-field" placeholder="Ваш вопрос" required></textarea>
+          <textarea class="js-question" name="message" id="message-call-field" placeholder="Ваш вопрос"></textarea>
         </div>
 
         <div class="modal-form__agreement-field report__agreement-field">
