--- a/order-call.html
+++ b/order-call.html
@@ -17,7 +17,7 @@
 <body class="page__body">
   <header class="container main-header">
     <div class="main-header__logo logo">
-      <a href="../">
+      <a href="https://dmitry-ios.github.io/smart-device/">
         <svg width="202" height="52" viewBox="0 0 202 52" preserveAspectRatio="xMinYMin slice" role="img" aria-label="Логотип Smart Device (умные технологии)">
           <use xlink:href="img/sprite_auto.svg#logo"></use>
         </svg>
@@ -62,7 +62,7 @@
     <div class="container main-footer__inner">
       <div class="main-footer__about">
         <div class="main-footer__logo logo logo--full">
-          <a href="../">
+          <a href="https://dmitry-ios.github.io/smart-device/">
             <svg width="216" height="52" viewBox="0 0 216 52" role="img" aria-label="Логотип Smart Device (умные технологии)">
               <use xlink:href="img/sprite_auto.svg#logo-footer"></use>
             </svg>
